# angie

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
examples/: CMakeLists.txt
examples/platform/: main.cpp  platform_main.cpp
include/angie/core/: algorithm.hpp  base.hpp  config.hpp  constants.hpp  defines.hpp  initializer.hpp  types.hpp  utils.hpp  version.hpp
include/angie/core/buffers/: array_buffer.hpp
include/angie/core/containers/: common.hpp  dynamic_array.hpp
include/angie/core/diagnostics/: assert.hpp  callstack.hpp  debugger.hpp
include/angie/core/memory/: allocator.hpp  global.hpp  manipulation.hpp  utils.hpp
include/angie/core/string/: dynamic_string.hpp
include/angie/core/strings/: ansi_string.hpp  dynamic_string.hpp  utf8_string.hpp
include/angie/core/system/: cpu.hpp  cpu_info.hpp  report.hpp  system.hpp
src/core/: CMakeLists.txt
src/core/diagnostics/: callstack.cpp
src/core/memory/: allocator.cpp  global.cpp  manipulation.cpp  operators.cpp  utils.cpp
src/core/memory/impl/: global_impl.hpp
src/core/memory/impl/default/: global_default.cpp
src/core/memory/impl/ltalloc/: global_ltalloc.cpp
src/core/strings/impl/: utf8_string.cpp
src/core/strings/impl/stb/: string_stb.cpp
src/core/system/: cpu.cpp  report.cpp  system.cpp
src/core/system/impl/: cpu_impl.hpp  system_impl.hpp
src/core/system/impl/cpu_features/: cpu_features.cpp  cpu_features_x86.cpp
src/core/system/impl/cpuinfo/: cpu_cpuinfo.cpp  cpu_cpuinfo_win.cpp
src/core/system/impl/default/: cpu_default.cpp  system_default.cpp
src/core/system/impl/libcpuid/: cpu_libcpuid.cpp
src/core/system/impl/plibsys/: system_plibsys.cpp
test/: CMakeLists.txt
test/angie/core/containers/: array_tests.cpp
test/angie/core/memory/: memory_tests.cpp
test/angie/core/strings/: string_tests.cpp
test/angie/core/system/: cpu_tests.cpp  system_tests.cpp  tests_system.cpp
tools/: emsdk_with_args.ps1
